lucicfg/testdata/errors/project_without_name.star
core.project(name = None)

# Expect errors like:
#
# Traceback (most recent call last):
#  ...
# Error: bad "name": missing
